UN-platform-and-home-updated

--- a/uniphynew/index.html
+++ b/uniphynew/index.html
@@ -141,6 +141,9 @@
       .swiper5 .swiper-wrapper .swiper-slide li {
          list-style-type: disclosure-closed;
       }
+      li::marker {
+         color: #FFA353;
+      }
 		
 		/* Mobile styles */
 		@media (max-width: 768px) {
@@ -467,21 +470,21 @@
                         <!-- .section -->
                         <section class="section-block section-spacing section-block--container-default section-block--theme-default testimonials-slider testimonials-slider-1 ">
                            <div class="section-block__header text-center boxes--columns-two">
-                              <h2 class="section-block__title section-block__sub_title boxes__title ">AI-Powered Uniphy</h2>
+                              <h1 class="section-block__title section-block__sub_title boxes__title ">AI-Powered Uniphy</h1>
                            </div>
                            <div class="container" style="padding-top: 25px;">
                               <div class="swiper swiper5 mySwiper">
                                  <div class="swiper-wrapper">
-                                    <div class="swiper-slide" style="background: linear-gradient(rgba(18, 134, 168, 0.8)), url(./assets/images/Learn.jpg); background-position: center; color: white; text-align: center;">
+                                    <div class="swiper-slide" style="background: linear-gradient(to left, rgba(0,0,0,0.1), rgba(0,0,0,0.1)), linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.2)), url(./assets/images/Learn.jpg); background-position: center; color: white; text-align: center;">
                                        <div>
                                           <div >
-                                             <h3 style="font-weight: 600; color: white;">
+                                             <h3 style="font-weight: 600; color: #fff;">
                                                 LEARN – Continuous Improvement
                                              </h3>
                                           </div>
                                           <div >
                                              <div>
-                                                <ul style="line-height: normal;  color: white; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
+                                                <ul style="line-height: normal;  color: #fff; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
 								  			   	            <li>AI-powered customer enquiry assistant</li>
 								  			   	            <li>Usage, Team & Business Analytics</li>
 								  			   	            <li>Outcome-based Experimentation</li>
@@ -491,16 +494,16 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="swiper-slide" style="background: linear-gradient(rgba(210, 181, 59, 0.8)), url(./assets/images/Think.jpg); background-position: center; color: white; text-align: center;">
+                                    <div class="swiper-slide" style="background: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0)), linear-gradient(to left, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0)), url(./assets/images/Think.jpg); background-position: center; color: white; text-align: center;">
                                        <div class="slide_carousel">
                                           <div >
-                                             <h3 style="font-weight: 600; color: white;">
+                                             <h3 style="font-weight: 600; color: #fff;">
                                                 THINK – Blueprint
                                              </h3>
                                           </div>
                                           <div >
                                              <div>
-                                                <ul style="line-height: normal;  color: white; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
+                                                <ul style="line-height: normal;  color: #fff; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
                                                    <li>AI-generated business & technical blueprints</li>
                                                    <li>AI-powered requirement gathering</li>
                                                    <li>Architecture and technical design</li>
@@ -511,16 +514,16 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="swiper-slide" style="background: linear-gradient(rgba(218, 97, 30, 0.8)), url(./assets/images/Monitor.png); background-position: center; color: white; text-align: center;">
+                                    <div class="swiper-slide" style="background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)) center center, url(./assets/images/Monitor.png) center center / cover no-repeat; background-position: center; color: white; text-align: center;">
                                        <div class="slide_carousel">
                                           <div >
-                                             <h3 style="font-weight: 600; color: white;">
+                                             <h3 style="font-weight: 600; color: #fff;">
                                                 MANAGE – Monitor & Support
                                              </h3>
                                           </div>
                                           <div >
                                              <div>
-                                                <ul style="line-height: normal;  color: white; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
+                                                <ul style="line-height: normal;  color: #fff; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
                                                    <li>AI-powered anomaly detection & predictive alerts</li>
                                                    <li>Smart remediation & recovery</li>
                                                 </ul>
@@ -528,16 +531,16 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="swiper-slide" style="background: linear-gradient(rgba(172, 42, 26, 0.8)), url(./assets/images/Run.png); background-position: center; color: white; text-align: center;">
+                                    <div class="swiper-slide" style="background: linear-gradient(to right, rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url(./assets/images/Run.png); background-position: center; color: white; text-align: center;">
                                        <div class="slide_carousel">
                                           <div >
-                                             <h3 style="font-weight: 600; color: white;">
+                                             <h3 style="font-weight: 600; color: #fff;">
                                                 RUN – Operate in Cloud
                                              </h3>
                                           </div>
                                           <div >
                                              <div>
-                                                <ul style="line-height: normal; color: white; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
+                                                <ul style="line-height: normal; color: #fff; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
                                                    <li>Builds and provisions missing features on-demand</li>
                                                    <li>Predicts workload spikes & optimizes runtime resources</li>
                                                    <li>Self-healing environments</li>
@@ -546,16 +549,16 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="swiper-slide" style="background: linear-gradient(rgba(128, 27, 171, 0.8)), url(./assets/images/Deploy.jpg); background-position: center; color: white; text-align: center;">
+                                    <div class="swiper-slide" style="background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0)), url(./assets/images/Deploy.jpg); background-position: center; color: white; text-align: center;">
                                        <div class="slide_carousel">
                                           <div >
-                                             <h3 style="font-weight: 600; color: white;">
+                                             <h3 style="font-weight: 600; color: #fff;">
                                                 DELIVER – Deploy & Release
                                              </h3>
                                           </div>
                                           <div >
                                              <div>
-                                                <ul style="line-height: normal;  color: white; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
+                                                <ul style="line-height: normal;  color: #fff; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
                                                    <li>Environment Provisioning (Azure, AWS, On-Prem)</li>
                                                    <li>Middleware & Security Tooling Configuration</li>
                                                    <li>Application Deployment & Orchestration</li>
@@ -565,16 +568,16 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="swiper-slide" style="background: linear-gradient(rgba(11, 55, 77, 0.8)), url(./assets/images/Code.png); background-position: center; color: white; text-align: center;">
+                                    <div class="swiper-slide" style="background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0)), url(./assets/images/Code.png); background-position: center; color: white; text-align: center;">
                                        <div class="slide_carousel">
                                           <div >
-                                             <h3 style="font-weight: 600; color: white;">
+                                             <h3 style="font-weight: 600; color: #fff;">
                                                 CODE – Build & Test
                                              </h3>
                                           </div>
                                           <div >
                                              <div>
-                                                <ul style="line-height: normal;  color: white; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
+                                                <ul style="line-height: normal;  color: #fff; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
                                                    <li>Source Code Management (3rd-party tools)</li>
                                                    <li>Continuous Integration & Build Automation</li>
                                                    <li>Artifact Management</li>
@@ -594,7 +597,7 @@
                         <section class="section-spacing-bottom  section-block--container-default section-block--theme-light-purple-wave boxes boxes-1 unified-operation-section" style="background-color: #1d2087;">
                            <div class="container">
                               <div class="section-block__header text-center boxes--columns-two">
-                                 <h2 class="section-block__title boxes__title ">All-in-one Unified Operation</h2>
+                                 <h1 class="section-block__title boxes__title ">All-in-one Unified Operation</h1>
                               </div>
                               <div class="boxes__wrapper boxes__wrapper--columns-two">
                                  <div class="boxes__box-item boxes__box-item--align-center boxes__box-item--style-shadow" style="box-shadow: 0 12px 40px rgba(192, 174, 229, 1.15);">
