UN-spacing issue fix

--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -847,7 +847,7 @@
                               </div>
                               <div class="content-image__inner content-image__inner--image-left content-image__inner--">
                                  <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
-                                    <div class="content-image__content" style="justify-items: center;">
+                                    <div class="content-image__content">
                                        <div class="section-block__content text-left ">
                                           <ul>
                                              <li>Identify Recurring Data Issues</li>
@@ -861,11 +861,11 @@
                                  </div>
                                  <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
                                     <img width="2120" height="1354" src="../assets/images/handshake.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
-                                    <div class="content-image__content" style="justify-items: center;">
+                                    <div class="content-image__content">
                                        <div class="section-block__content text-left ">
                                           <ul>
                                              <li>Source Code</li>
-                                             <li>Management Configuration/Construction</li>
+                                             <li>Management Configuration / Construction</li>
                                              <li>Build and Continuous Integration</li>
                                              <li>Automated Testing Artifact/Asset Management</li>
                                           </ul>
@@ -880,7 +880,7 @@
                            <div class="container">
                               <div class="content-image__inner content-image__inner--image-left content-image__inner--">
                                  <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
-                                    <div class="content-image__content" style="justify-items: center;">
+                                    <div class="content-image__content">
                                        <div class="section-block__content text-left ">
                                           <ul>
                                              <li>Ops tooling Integration</li>
@@ -896,7 +896,7 @@
                                  </div>
                                  <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
                                     <img width="2120" height="1354" src="../assets/images/bag.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
-                                    <div class="content-image__content" style="justify-items: center;">
+                                    <div class="content-image__content"">
                                        <div class="section-block__content text-left ">
                                           <ul>
                                              <li>Hybrid Connectivity</li>
