--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -860,7 +860,7 @@
                                     <img width="2120" height="1354" src="../assets/images/coin.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
                                  </div>
                                  <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
-                                    <img width="2120" height="1354" src="../assets/images/handshake.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
+                                    <!-- <img width="2120" height="1354" src="../assets/images/handshake.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
                                     <div class="content-image__content">
                                        <div class="section-block__content text-left ">
                                           <ul>
@@ -868,6 +868,42 @@
                                              <li>Management Configuration / Construction</li>
                                              <li>Build and Continuous Integration</li>
                                              <li>Automated Testing Artifact/Asset Management</li>
+                                          </ul>
+                                       </div>
+                                    </div> -->
+                                 </div>
+                              </div>
+                           </div>
+                           <!-- .container -->
+                        </section>
+                        <section class="section-block section-block--container-default content-image content-image-5 Intelligent-automation-section" style="padding-bottom: 0 !important;">
+                           <div class="container">
+                              <div class="content-image__inner content-image__inner--image-left content-image__inner--">
+                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
+                                    <!-- <div class="content-image__content">
+                                       <div class="section-block__content text-left ">
+                                          <ul>
+                                             <li>Ops tooling Integration</li>
+                                             <li>Security Tooling Integration</li>
+                                             <li>TTM</li>
+                                             <li>Release Management</li>
+                                             <li>A/B Deployments</li>
+                                             <li>Release Testing</li>
+                                          </ul>
+                                       </div>
+                                    </div>
+                                    <img width="2120" height="1354" src="../assets/images/foler.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	 -->
+                                 </div>
+                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
+                                    <img width="2120" height="1354" src="../assets/images/bag.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
+                                    <div class="content-image__content"">
+                                       <div class="section-block__content text-left ">
+                                          <ul>
+                                             <li>Hybrid Connectivity</li>
+                                             <li>Hybrid Security</li>
+                                             <li>Autoscaling</li>
+                                             <li>Auto Healing</li>
+                                             <li>Canaries</li>
                                           </ul>
                                        </div>
                                     </div>
@@ -895,7 +931,7 @@
                                     <img width="2120" height="1354" src="../assets/images/foler.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
                                  </div>
                                  <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
-                                    <img width="2120" height="1354" src="../assets/images/bag.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
+                                    <!-- <img width="2120" height="1354" src="../assets/images/bag.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
                                     <div class="content-image__content"">
                                        <div class="section-block__content text-left ">
                                           <ul>
@@ -904,6 +940,42 @@
                                              <li>Autoscaling</li>
                                              <li>Auto Healing</li>
                                              <li>Canaries</li>
+                                          </ul>
+                                       </div>
+                                    </div> -->
+                                 </div>
+                              </div>
+                           </div>
+                           <!-- .container -->
+                        </section>
+                        <section class="section-block section-block--container-default section-block--theme-light-purple content-image content-image-5 Intelligent-automation-section" style="padding-bottom: 0 !important;">
+                           <div class="container">
+                              <!-- <div class="section-block__header text-center boxes--columns-two">
+                                 <h1 class="section-block__title boxes__title">Intelligent Automation through Tools and Accelerators</h1>
+                              </div> -->
+                              <div class="content-image__inner content-image__inner--image-left content-image__inner--">
+                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
+                                    <!-- <div class="content-image__content">
+                                       <div class="section-block__content text-left ">
+                                          <ul>
+                                             <li>Identify Recurring Data Issues</li>
+                                             <li>Monitoring and Metrics Runbook</li>
+                                             <li>Automation Deployment</li>
+                                             <li>Automation Predictive Operations</li>
+                                          </ul>
+                                       </div>
+                                    </div>
+                                    <img width="2120" height="1354" src="../assets/images/coin.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	 -->
+                                 </div>
+                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
+                                    <img width="2120" height="1354" src="../assets/images/handshake.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
+                                    <div class="content-image__content">
+                                       <div class="section-block__content text-left ">
+                                          <ul>
+                                             <li>Source Code</li>
+                                             <li>Management Configuration / Construction</li>
+                                             <li>Build and Continuous Integration</li>
+                                             <li>Automated Testing Artifact/Asset Management</li>
                                           </ul>
                                        </div>
                                     </div>
