UN-zigzag Updated

--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -876,7 +876,7 @@
                            </div>
                            <!-- .container -->
                         </section>
-                        <section class="section-block section-block--container-default content-image content-image-5 Intelligent-automation-section" style="padding-bottom: 0 !important;">
+                        <section class="section-block section-block--container-default content-image content-image-5 Intelligent-automation-section" style="padding-bottom: 0 !important; padding-top: 0 !important;">
                            <div class="container">
                               <div class="content-image__inner content-image__inner--image-left content-image__inner--">
                                  <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
@@ -912,7 +912,7 @@
                            </div>
                            <!-- .container -->
                         </section>
-                        <section class="section-block section-block--container-default content-image content-image-5 Intelligent-automation-section" style="padding-bottom: 0 !important;">
+                        <section class="section-block section-block--theme-light-purple section-block--container-default content-image content-image-5 Intelligent-automation-section" style="padding-bottom: 0 !important; padding-top: 0 !important;">
                            <div class="container">
                               <div class="content-image__inner content-image__inner--image-left content-image__inner--">
                                  <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
@@ -948,7 +948,7 @@
                            </div>
                            <!-- .container -->
                         </section>
-                        <section class="section-block section-block--container-default section-block--theme-light-purple content-image content-image-5 Intelligent-automation-section" style="padding-bottom: 0 !important;">
+                        <section class="section-block section-block--container-default content-image content-image-5 Intelligent-automation-section" style="padding-bottom: 0 !important; padding-top: 0 !important;">
                            <div class="container">
                               <!-- <div class="section-block__header text-center boxes--columns-two">
                                  <h1 class="section-block__title boxes__title">Intelligent Automation through Tools and Accelerators</h1>
